--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "homepage": "http://yachinyou.github.io/hero-app",
   "dependencies": {
-    "bootstrap": "^4.1.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "bootstrap": "^4.1.3",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-ga": "^2.5.3",
-    "react-meta-tags": "^0.4.1",
+    "react-meta-tags": "^0.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.1.0"
+    "reactstrap": "^6.4.0",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
